# zendo

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/zendo/: __init__.py  app.py  auth.py  config.py  constants.py  main.py  models.py
src/zendo/assets/: bootstrap-custom.css  callbacks.js  default.css
src/zendo/assets/css/: bootstrap-custom.css.map
src/zendo/components/: __init__.py  chat.py  login.py  navbar.py  register.py  timer.py
src/zendo/layouts/: __init__.py  auth_layout.py  main_layout.py
src/zendo/services/: applet_state.py  auth.py
tests/: __init__.py
