[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendo"
dynamic = ["version"]
description = 'Zendo - An extendable web-based application for creating and managing AI-powered chatbots'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
    { name = "Yasas Senarath", email = "12231659+ysenarath@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "platformdirs>=4.3.8",
    "sqlalchemy>=2.0.42",
    "watchdog>=6.0.0",
    "werkzeug>=3.1.3",
]

[project.urls]
Documentation = "https://github.com/ysenarath/zendo#readme"
Issues = "https://github.com/ysenarathh/zendo/issues"
Source = "https://github.com/ysenarath/zendo"

[tool.hatch.build.targets.wheel]
packages = ["src/zendo"]

[tool.hatch.version]
path = "src/zendo/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zendo tests}"

[tool.coverage.run]
source_pkgs = ["zendo", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
zendo = ["src/zendo", "*/zendo/src/zendo"]
tests = ["tests", "*/zendo/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[project.scripts]
zendo = "zendo.main:cli"
